--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.31.0",
     "postcss": "^8.4.47",
+    "sass": "^1.80.6",
+    "sass-embedded": "^1.80.6",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
