--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vueup/vue-quill": "^1.2.0",
+    "echarts": "^5.5.1",
     "gitart-vue-dialog": "^3.1.0",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
